--- a/K-means.ipynb
+++ b/K-means.ipynb
@@ -4,6 +4,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Nikhil Patil\n",
+    "# CSEC 620 Project 2\n",
+    "# K-Means Clustering Implementation \n",
     "from sklearn.decomposition import PCA\n",
     "import pandas as pd\n",
     "import numpy as np\n",
