Confusion Matrix created for Iris dataset

--- a/K-nearest neighbor.ipynb
+++ b/K-nearest neighbor.ipynb
@@ -8,7 +8,25 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": "# Nikhil Patil "
+   "source": [
+    "# Nikhil Patil\n",
+    "# CSEC 620 Project 2\n",
+    "# K-Nearest Neighbor Clustering Implementation \n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns \n",
+    "import matplotlib.pyplot as plt\n",
+    "import re, random\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "class KNearestNeighbor:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
